--- a/packages/vue/examples/reactivity/reactive.html
+++ b/packages/vue/examples/reactivity/reactive.html
@@ -7,13 +7,16 @@
     <script src="../../dist/vue.js"></script>
   </head>
   <body>
+    <div id="app"></div>
     <script>
-      const { reactive } = Vue
+      const { reactive, effect } = Vue
       const obj = reactive({
         name: 'Evans'
       })
-      console.log('obj ', obj.name)
-      obj.name = 'Sherry'
+
+      effect(() => {
+        document.querySelector('#app').innerText = obj.name
+      })
     </script>
   </body>
 </html>
