--- a/packages/vue/examples/reactivity/reactive.html
+++ b/packages/vue/examples/reactivity/reactive.html
@@ -17,6 +17,10 @@
       effect(() => {
         document.querySelector('#app').innerText = obj.name
       })
+
+      setTimeout(() => {
+        obj.name = 'lisa'
+      }, 2000)
     </script>
   </body>
 </html>
