--- a/packages/vue/examples/reactivity/reactive.html
+++ b/packages/vue/examples/reactivity/reactive.html
@@ -7,7 +7,10 @@
     <script src="../../dist/vue.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <p id="p1"></p>
+      <p id="p2"></p>
+    </div>
     <script>
       const { reactive, effect } = Vue
       const obj = reactive({
@@ -15,11 +18,15 @@
       })
 
       effect(() => {
-        document.querySelector('#app').innerText = obj.name
+        document.querySelector('#p1').innerText = obj.name
+      })
+
+      effect(() => {
+        document.querySelector('#p2').innerText = obj.name
       })
 
       setTimeout(() => {
-        obj.name = 'lisa'
+        obj.name = 'Sherry'
       }, 2000)
     </script>
   </body>
