feat: 處理髒的狀態

--- a/packages/vue/examples/reactivity/computed.html
+++ b/packages/vue/examples/reactivity/computed.html
@@ -14,7 +14,7 @@
       const obj = reactive({
         name: 'Evans'
       })
-
+      debugger
       const computedObj = computed(() => 'name ' + obj.name)
 
       console.log('computed ', computedObj)
